kubernetes/configurations/k8s-deployments/compileserver-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compileserver-deployment
  labels:
    app: compileLejos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: compileLejos
  template:
    metadata:
      labels:
        app: compileLejos
    spec:
      volumes:
        - name: filesfolder
          hostPath:
            path: /host
            type: Directory
      serviceAccountName: compileserver
      imagePullSecrets:
        - name: registry-credentials
      containers:
        - name: compileserver
          image: hub.cs.upb.de/skrings/varobotprojectgroup/compileserver
          imagePullPolicy: Always
          stdin: true
          tty: true
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: filesfolder
              mountPath: /usr/src/app/files
