kubernetes/configurations/k8s-deployments/compileserver-service.yml
apiVersion: v1
kind: Service
metadata:
  name: compile-service
spec:
  selector:
    app: compileLejos
  ports:
    - protocol: TCP
      port: 3000
