kubernetes/configurations/k8s-deployments/compileserver-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: compileserver-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
      paths:
        - path: /compilesvc
          backend:
          serviceName: compile-service
          servicePort: 3000
